// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardPage Dashboard init completed  Should render dashboard grid 1`] = `
<div>
  <Connect(DashNav)
    $injector={Object {}}
    dashboard={
      DashboardModel {
        "annotations": Object {
          "list": Array [
            Object {
              "builtIn": 1,
              "datasource": "-- Grafana --",
              "enable": true,
              "hide": true,
              "iconColor": "rgba(0, 211, 255, 1)",
              "name": "Annotations & Alerts",
              "type": "dashboard",
            },
          ],
        },
        "autoUpdate": undefined,
        "description": undefined,
        "editable": true,
        "events": Emitter {
          "emitter": EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
          },
        },
        "getVariables": [Function],
        "gnetId": null,
        "graphTooltip": 0,
        "id": null,
        "links": Array [],
        "meta": Object {
          "canEdit": true,
          "canMakeEditable": false,
          "canSave": true,
          "canShare": true,
          "canStar": true,
          "fullscreen": false,
          "isEditing": false,
          "showSettings": true,
        },
        "originalTemplating": Array [],
        "originalTime": Object {
          "from": "now-6h",
          "to": "now",
        },
        "panels": Array [
          PanelModel {
            "cachedPluginOptions": Object {},
            "datasource": null,
            "events": Emitter {
              "emitter": EventEmitter {
                "_events": Object {},
                "_eventsCount": 0,
              },
            },
            "gridPos": Object {
              "h": 1,
              "w": 1,
              "x": 0,
              "y": 0,
            },
            "id": 1,
            "options": Object {},
            "replaceVariables": [Function],
            "targets": Array [
              Object {
                "refId": "A",
              },
            ],
            "title": "My graph",
            "transparent": false,
            "type": "graph",
          },
        ],
        "refresh": undefined,
        "revision": undefined,
        "schemaVersion": 22,
        "snapshot": undefined,
        "style": "dark",
        "tags": Array [],
        "templating": Object {
          "list": Array [],
        },
        "time": Object {
          "from": "now-6h",
          "to": "now",
        },
        "timepicker": Object {},
        "timezone": "",
        "title": "My dashboard",
        "uid": null,
        "variables": Object {
          "list": Array [],
        },
        "version": 0,
      }
    }
    isEditing={false}
    isFullscreen={false}
    onAddPanel={[Function]}
  />
  <div
    className="scroll-canvas scroll-canvas--dashboard"
  >
    <CustomScrollbar
      autoHeightMax="100%"
      autoHeightMin="100%"
      autoHide={false}
      autoHideDuration={200}
      autoHideTimeout={200}
      className="custom-scrollbar--page"
      hideTracksWhenNotNeeded={false}
      setScrollTop={[Function]}
      updateAfterMountMs={500}
    >
      <div
        className="dashboard-container"
      >
        <AngularSubMenu
          dashboard={
            DashboardModel {
              "annotations": Object {
                "list": Array [
                  Object {
                    "builtIn": 1,
                    "datasource": "-- Grafana --",
                    "enable": true,
                    "hide": true,
                    "iconColor": "rgba(0, 211, 255, 1)",
                    "name": "Annotations & Alerts",
                    "type": "dashboard",
                  },
                ],
              },
              "autoUpdate": undefined,
              "description": undefined,
              "editable": true,
              "events": Emitter {
                "emitter": EventEmitter {
                  "_events": Object {},
                  "_eventsCount": 0,
                },
              },
              "getVariables": [Function],
              "gnetId": null,
              "graphTooltip": 0,
              "id": null,
              "links": Array [],
              "meta": Object {
                "canEdit": true,
                "canMakeEditable": false,
                "canSave": true,
                "canShare": true,
                "canStar": true,
                "fullscreen": false,
                "isEditing": false,
                "showSettings": true,
              },
              "originalTemplating": Array [],
              "originalTime": Object {
                "from": "now-6h",
                "to": "now",
              },
              "panels": Array [
                PanelModel {
                  "cachedPluginOptions": Object {},
                  "datasource": null,
                  "events": Emitter {
                    "emitter": EventEmitter {
                      "_events": Object {},
                      "_eventsCount": 0,
                    },
                  },
                  "gridPos": Object {
                    "h": 1,
                    "w": 1,
                    "x": 0,
                    "y": 0,
                  },
                  "id": 1,
                  "options": Object {},
                  "replaceVariables": [Function],
                  "targets": Array [
                    Object {
                      "refId": "A",
                    },
                  ],
                  "title": "My graph",
                  "transparent": false,
                  "type": "graph",
                },
              ],
              "refresh": undefined,
              "revision": undefined,
              "schemaVersion": 22,
              "snapshot": undefined,
              "style": "dark",
              "tags": Array [],
              "templating": Object {
                "list": Array [],
              },
              "time": Object {
                "from": "now-6h",
                "to": "now",
              },
              "timepicker": Object {},
              "timezone": "",
              "title": "My dashboard",
              "uid": null,
              "variables": Object {
                "list": Array [],
              },
              "version": 0,
            }
          }
        />
        <DashboardGrid
          dashboard={
            DashboardModel {
              "annotations": Object {
                "list": Array [
                  Object {
                    "builtIn": 1,
                    "datasource": "-- Grafana --",
                    "enable": true,
                    "hide": true,
                    "iconColor": "rgba(0, 211, 255, 1)",
                    "name": "Annotations & Alerts",
                    "type": "dashboard",
                  },
                ],
              },
              "autoUpdate": undefined,
              "description": undefined,
              "editable": true,
              "events": Emitter {
                "emitter": EventEmitter {
                  "_events": Object {},
                  "_eventsCount": 0,
                },
              },
              "getVariables": [Function],
              "gnetId": null,
              "graphTooltip": 0,
              "id": null,
              "links": Array [],
              "meta": Object {
                "canEdit": true,
                "canMakeEditable": false,
                "canSave": true,
                "canShare": true,
                "canStar": true,
                "fullscreen": false,
                "isEditing": false,
                "showSettings": true,
              },
              "originalTemplating": Array [],
              "originalTime": Object {
                "from": "now-6h",
                "to": "now",
              },
              "panels": Array [
                PanelModel {
                  "cachedPluginOptions": Object {},
                  "datasource": null,
                  "events": Emitter {
                    "emitter": EventEmitter {
                      "_events": Object {},
                      "_eventsCount": 0,
                    },
                  },
                  "gridPos": Object {
                    "h": 1,
                    "w": 1,
                    "x": 0,
                    "y": 0,
                  },
                  "id": 1,
                  "options": Object {},
                  "replaceVariables": [Function],
                  "targets": Array [
                    Object {
                      "refId": "A",
                    },
                  ],
                  "title": "My graph",
                  "transparent": false,
                  "type": "graph",
                },
              ],
              "refresh": undefined,
              "revision": undefined,
              "schemaVersion": 22,
              "snapshot": undefined,
              "style": "dark",
              "tags": Array [],
              "templating": Object {
                "list": Array [],
              },
              "time": Object {
                "from": "now-6h",
                "to": "now",
              },
              "timepicker": Object {},
              "timezone": "",
              "title": "My dashboard",
              "uid": null,
              "variables": Object {
                "list": Array [],
              },
              "version": 0,
            }
          }
          isEditing={false}
          isFullscreen={false}
          scrollTop={0}
        />
      </div>
    </CustomScrollbar>
  </div>
</div>
`;

exports[`DashboardPage Dashboard is fetching slowly Should render slow init state 1`] = `
<div
  className="dashboard-loading"
>
  <div
    className="dashboard-loading__text"
  >
    <i
      className="fa fa-spinner fa-spin"
    />
     
    Fetching
  </div>
</div>
`;

exports[`DashboardPage Given initial state Should render nothing 1`] = `""`;

exports[`DashboardPage When dashboard has editview url state should render settings view 1`] = `
<div>
  <Connect(DashNav)
    $injector={Object {}}
    dashboard={
      DashboardModel {
        "annotations": Object {
          "list": Array [
            Object {
              "builtIn": 1,
              "datasource": "-- Grafana --",
              "enable": true,
              "hide": true,
              "iconColor": "rgba(0, 211, 255, 1)",
              "name": "Annotations & Alerts",
              "type": "dashboard",
            },
          ],
        },
        "autoUpdate": undefined,
        "description": undefined,
        "editable": true,
        "events": Emitter {
          "emitter": EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
          },
        },
        "getVariables": [Function],
        "gnetId": null,
        "graphTooltip": 0,
        "id": null,
        "links": Array [],
        "meta": Object {
          "canEdit": true,
          "canMakeEditable": false,
          "canSave": true,
          "canShare": true,
          "canStar": true,
          "fullscreen": false,
          "isEditing": false,
          "showSettings": true,
        },
        "originalTemplating": Array [],
        "originalTime": Object {
          "from": "now-6h",
          "to": "now",
        },
        "panels": Array [
          PanelModel {
            "cachedPluginOptions": Object {},
            "datasource": null,
            "events": Emitter {
              "emitter": EventEmitter {
                "_events": Object {},
                "_eventsCount": 0,
              },
            },
            "gridPos": Object {
              "h": 1,
              "w": 1,
              "x": 0,
              "y": 0,
            },
            "id": 1,
            "options": Object {},
            "replaceVariables": [Function],
            "targets": Array [
              Object {
                "refId": "A",
              },
            ],
            "title": "My graph",
            "transparent": false,
            "type": "graph",
          },
        ],
        "refresh": undefined,
        "revision": undefined,
        "schemaVersion": 22,
        "snapshot": undefined,
        "style": "dark",
        "tags": Array [],
        "templating": Object {
          "list": Array [],
        },
        "time": Object {
          "from": "now-6h",
          "to": "now",
        },
        "timepicker": Object {},
        "timezone": "",
        "title": "My dashboard",
        "uid": null,
        "variables": Object {
          "list": Array [],
        },
        "version": 0,
      }
    }
    isEditing={false}
    isFullscreen={false}
    onAddPanel={[Function]}
  />
  <div
    className="scroll-canvas scroll-canvas--dashboard"
  >
    <CustomScrollbar
      autoHeightMax="100%"
      autoHeightMin="100%"
      autoHide={false}
      autoHideDuration={200}
      autoHideTimeout={200}
      className="custom-scrollbar--page"
      hideTracksWhenNotNeeded={false}
      setScrollTop={[Function]}
      updateAfterMountMs={500}
    >
      <div
        className="dashboard-container"
      >
        <AngularSubMenu
          dashboard={
            DashboardModel {
              "annotations": Object {
                "list": Array [
                  Object {
                    "builtIn": 1,
                    "datasource": "-- Grafana --",
                    "enable": true,
                    "hide": true,
                    "iconColor": "rgba(0, 211, 255, 1)",
                    "name": "Annotations & Alerts",
                    "type": "dashboard",
                  },
                ],
              },
              "autoUpdate": undefined,
              "description": undefined,
              "editable": true,
              "events": Emitter {
                "emitter": EventEmitter {
                  "_events": Object {},
                  "_eventsCount": 0,
                },
              },
              "getVariables": [Function],
              "gnetId": null,
              "graphTooltip": 0,
              "id": null,
              "links": Array [],
              "meta": Object {
                "canEdit": true,
                "canMakeEditable": false,
                "canSave": true,
                "canShare": true,
                "canStar": true,
                "fullscreen": false,
                "isEditing": false,
                "showSettings": true,
              },
              "originalTemplating": Array [],
              "originalTime": Object {
                "from": "now-6h",
                "to": "now",
              },
              "panels": Array [
                PanelModel {
                  "cachedPluginOptions": Object {},
                  "datasource": null,
                  "events": Emitter {
                    "emitter": EventEmitter {
                      "_events": Object {},
                      "_eventsCount": 0,
                    },
                  },
                  "gridPos": Object {
                    "h": 1,
                    "w": 1,
                    "x": 0,
                    "y": 0,
                  },
                  "id": 1,
                  "options": Object {},
                  "replaceVariables": [Function],
                  "targets": Array [
                    Object {
                      "refId": "A",
                    },
                  ],
                  "title": "My graph",
                  "transparent": false,
                  "type": "graph",
                },
              ],
              "refresh": undefined,
              "revision": undefined,
              "schemaVersion": 22,
              "snapshot": undefined,
              "style": "dark",
              "tags": Array [],
              "templating": Object {
                "list": Array [],
              },
              "time": Object {
                "from": "now-6h",
                "to": "now",
              },
              "timepicker": Object {},
              "timezone": "",
              "title": "My dashboard",
              "uid": null,
              "variables": Object {
                "list": Array [],
              },
              "version": 0,
            }
          }
        />
        <DashboardGrid
          dashboard={
            DashboardModel {
              "annotations": Object {
                "list": Array [
                  Object {
                    "builtIn": 1,
                    "datasource": "-- Grafana --",
                    "enable": true,
                    "hide": true,
                    "iconColor": "rgba(0, 211, 255, 1)",
                    "name": "Annotations & Alerts",
                    "type": "dashboard",
                  },
                ],
              },
              "autoUpdate": undefined,
              "description": undefined,
              "editable": true,
              "events": Emitter {
                "emitter": EventEmitter {
                  "_events": Object {},
                  "_eventsCount": 0,
                },
              },
              "getVariables": [Function],
              "gnetId": null,
              "graphTooltip": 0,
              "id": null,
              "links": Array [],
              "meta": Object {
                "canEdit": true,
                "canMakeEditable": false,
                "canSave": true,
                "canShare": true,
                "canStar": true,
                "fullscreen": false,
                "isEditing": false,
                "showSettings": true,
              },
              "originalTemplating": Array [],
              "originalTime": Object {
                "from": "now-6h",
                "to": "now",
              },
              "panels": Array [
                PanelModel {
                  "cachedPluginOptions": Object {},
                  "datasource": null,
                  "events": Emitter {
                    "emitter": EventEmitter {
                      "_events": Object {},
                      "_eventsCount": 0,
                    },
                  },
                  "gridPos": Object {
                    "h": 1,
                    "w": 1,
                    "x": 0,
                    "y": 0,
                  },
                  "id": 1,
                  "options": Object {},
                  "replaceVariables": [Function],
                  "targets": Array [
                    Object {
                      "refId": "A",
                    },
                  ],
                  "title": "My graph",
                  "transparent": false,
                  "type": "graph",
                },
              ],
              "refresh": undefined,
              "revision": undefined,
              "schemaVersion": 22,
              "snapshot": undefined,
              "style": "dark",
              "tags": Array [],
              "templating": Object {
                "list": Array [],
              },
              "time": Object {
                "from": "now-6h",
                "to": "now",
              },
              "timepicker": Object {},
              "timezone": "",
              "title": "My dashboard",
              "uid": null,
              "variables": Object {
                "list": Array [],
              },
              "version": 0,
            }
          }
          isEditing={false}
          isFullscreen={false}
          scrollTop={0}
        />
      </div>
    </CustomScrollbar>
  </div>
  <Portal>
    <DashboardSettings
      dashboard={
        DashboardModel {
          "annotations": Object {
            "list": Array [
              Object {
                "builtIn": 1,
                "datasource": "-- Grafana --",
                "enable": true,
                "hide": true,
                "iconColor": "rgba(0, 211, 255, 1)",
                "name": "Annotations & Alerts",
                "type": "dashboard",
              },
            ],
          },
          "autoUpdate": undefined,
          "description": undefined,
          "editable": true,
          "events": Emitter {
            "emitter": EventEmitter {
              "_events": Object {},
              "_eventsCount": 0,
            },
          },
          "getVariables": [Function],
          "gnetId": null,
          "graphTooltip": 0,
          "id": null,
          "links": Array [],
          "meta": Object {
            "canEdit": true,
            "canMakeEditable": false,
            "canSave": true,
            "canShare": true,
            "canStar": true,
            "fullscreen": false,
            "isEditing": false,
            "showSettings": true,
          },
          "originalTemplating": Array [],
          "originalTime": Object {
            "from": "now-6h",
            "to": "now",
          },
          "panels": Array [
            PanelModel {
              "cachedPluginOptions": Object {},
              "datasource": null,
              "events": Emitter {
                "emitter": EventEmitter {
                  "_events": Object {},
                  "_eventsCount": 0,
                },
              },
              "gridPos": Object {
                "h": 1,
                "w": 1,
                "x": 0,
                "y": 0,
              },
              "id": 1,
              "options": Object {},
              "replaceVariables": [Function],
              "targets": Array [
                Object {
                  "refId": "A",
                },
              ],
              "title": "My graph",
              "transparent": false,
              "type": "graph",
            },
          ],
          "refresh": undefined,
          "revision": undefined,
          "schemaVersion": 22,
          "snapshot": undefined,
          "style": "dark",
          "tags": Array [],
          "templating": Object {
            "list": Array [],
          },
          "time": Object {
            "from": "now-6h",
            "to": "now",
          },
          "timepicker": Object {},
          "timezone": "",
          "title": "My dashboard",
          "uid": null,
          "variables": Object {
            "list": Array [],
          },
          "version": 0,
        }
      }
      updateLocation={[MockFunction]}
    />
  </Portal>
</div>
`;
